# normalization

./: normalization.cabal  stack.yaml
src/Data/: Normalization.hs
test/: Test.hs
