name:                normalization
version:             0.1.0.0
synopsis:            Data normalization
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.18

source-repository head

  type:                git
  location:            git@github.com:int-index/normalization.git


library

  exposed-modules:     Data.Normalization

  build-depends:       base >=4.8 && <4.10
               ,       mtl
               ,       containers
               ,       reflection >= 2
               ,       lens >= 4.0
               ,       vector
               ,       binary
               ,       vector-binary-instances
               ,       hashable
               ,       QuickCheck

  default-language:    Haskell2010

  hs-source-dirs:      src
  ghc-options:         -Wall


test-suite tests

  build-depends:       base
               ,       tasty
               ,       tasty-quickcheck
               ,       QuickCheck
               ,       normalization

  main-is:             Test.hs

  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
